    the user to the currently played audio file.
  * Top Library tree nodes re-arranged.
  * When downloading a single partial file, the transfer manager shows
    the proper icon based on the file type of the file being downloaded.
  * Add partial downloads, and multiple transfers that contain audio files
    to playlists right from the transfer manager.
  * A lot of bug fixes.
 
 -- FrostWire Team <contact@frostwire.com>  Wed, 2 Nov 2011 16:14:41 -0500

frostwire (5.2.3) stable; urgency=high
  * Change the order of an audio file on playlist with drag and drop.
  * Change the order of multiple audio files on a playlist with drag and drop.
  * Drop audio files and folders at a specific position inside a playlist.
  * Remembers the column and order you last set on the transfer manager
    after restart.
  * Remembers the last file type you searched for after restart.
  * New FrostWire icon compatible with Ubuntu 11.10
  * Bug fix, now if you're playing a song and you resort the playlist by
    any of the columns, the next song to be played will be the one below
    the current song in the new order.
  * Searching inside "Finished Downloads" now yields folder names as search
    results.
  * Fixes lingering popup menu issue.
  * Fixed DNS query issue affecting Linux.
 
 -- FrostWire Team <contact@frostwire.com>  Thu, 20 Oct 2011 17:42:08 -0500

frostwire (5.2.2) stable; urgency=high
  * Library tables are now cached in memory, searches are done in the cache
    speeding up the experience considerably for users with several thousand
    files.
  * Create or add audio files to a playlist right from the Transfer manager.
  * iTunes importing after audio transfers finish turned off by default.
  * Completed transfers that contain at least one audio file can be sent
    to iTunes from the Transfer manager.
  * Audio status component recognizes an Audio Stream, from an Audio file
    from an internet stream url. Clicking on it will take you to the